# mkube

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.scratch  Makefile  README.md  go.mod  go.sum
.github/workflows/: build-image.yml  ci.yml  microdns.yml  microkube.yml  mkube-update.yml  release.yml
cmd/installer/: main.go
cmd/microkube/: main.go
cmd/mikrotik-kube/: main.go
cmd/mkube/: main.go
cmd/mkube-agent/: Containerfile  config.toml  main.go
cmd/mkube-boot/: main.go
cmd/mkube-test/: main.go
cmd/mkube-update/: Dockerfile  main.go
cmd/pvc-test/: Containerfile  main.go  stormd-config.toml
cmd/pve-deploy/: main.go
cmd/registry/: main.go
deploy/: boot-order.yaml  config.yaml  job-scheduling-setup.yaml  mkube-update-config.yaml  proxmox-config.yaml  pvex-mkube-boot.yaml  pvex-mkube.yaml  pvex-registry.yaml  registry-config.yaml  rose1-config.yaml  stormd-config.toml
dns-backup/: g10.json  g11.json  gt.json  gw.json
docs/: api.md  bootconfig-crd-spec.md
enhancements/: agent-bootconfig-fixes.md  bmh-nic-filtering.md  bmh-operator-tftp-pxe.md  cloudid-imds-nat-rule.md  mkube-boot-from-registry.md  nfs-rootdir-containers.md  openshift-crio-rspacefs-integration.md  rspacefs-registry-backend.md  stormd-cloudid-ssh.md
hack/: build.sh  deploy.sh  dhcp-probe.py  dhcp-relay-probe.py  dhcp-test.py  dhcp-test.sh  make-tarball.sh  pull-and-deploy.sh
pkg/bmc/: client.go  (+4 more)
scripts/: servers-off.sh  servers-on.sh  setup-iscsi-cdrom.sh
tools/iscsi-pvc/: Cargo.toml
tools/iscsi-pvc/src/: ext4.rs  iscsi.rs  lib.rs  main.rs  routeros.rs
(+157 files in other folders)
